--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,104 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Navbar from "../components/Navbar.astro";
+import Section from "../components/Section.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Portafolio | Williams">
+  <Navbar />
+
+  <main class="container">
+    <section>
+      <p>Hola, me llamo Williams</p>
+      <h1>
+        DESARROLLADOR <br />
+        FROTNEND<span class="blue-dot">.</span>
+      </h1>
+    </section>
+
+    <Section
+      id="sobre-mi"
+      title="Sobre mí"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="proyectos"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+
+    <Section
+      class="sobre-mi"
+      title="Proyectos"
+      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
+    />
+  </main>
+
 </Layout>
