--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,95 +8,23 @@ import Layout from "../layouts/Layout.astro";
   <Navbar />
 
   <main class="container">
-    <section>
+    <section class ="inicio">
       <p>Hola, me llamo Williams</p>
       <h1>
         DESARROLLADOR <br />
         FROTNEND<span class="blue-dot">.</span>
       </h1>
+
+      <div class="contaiter-btn">
+        <a href="/">Descarga mi CV.</a>
+      </div>
     </section>
+
+    
 
     <Section
       id="sobre-mi"
       title="Sobre mí"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="proyectos"
-      title="Proyectos"
-      text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
-    />
-
-    <Section
-      class="sobre-mi"
-      title="Proyectos"
       text="Desarrollador web en camino a ser full-stack. Mi enfoque actual está en el front-end, donde busco crear experiencias de usuario excepcionales. Mi meta es dominar el back-end para construir soluciones completas y robustas que impulsen la innovación."
     />
   </main>
